Added cart, customer signup - signin, otp apis
