# src/routes/cart.routes.js
@@ -1,0 +1,10 @@
+const express = require('express');
+const { cartController } = require('../controllers');
+
+const cartRoutes = express.Router();
+
+cartRoutes.post('/', cartController.addCartItem);
+cartRoutes.get('/:cartId/items/count', cartController.getCartItemsCount);
+cartRoutes.get('/:cartId/items', cartController.getCartItems);
+
+module.exports = cartRoutes;
