# src/routes/customer.routes.js
@@ -3,10 +3,10 @@ const { customerController } = require('../controllers');
 
 const customerRoutes = express.Router();
 
-customerRoutes.get('/count', customerController.getListCount);
-customerRoutes.get('/', customerController.getList);
+// customerRoutes.get('/count', customerController.getListCount);
+// customerRoutes.get('/', customerController.getList);
 customerRoutes.get('/:customerId', customerController.getOne);
 customerRoutes.post('/sign-up', customerController.signUp);
-customerRoutes.post('/sign-in', customerController.signIn);
+// customerRoutes.post('/sign-in', customerController.signIn);
 
 module.exports = customerRoutes;
