# src/routes/index.js
@@ -4,8 +4,10 @@ const userRoutes = require('./user.routes');
 const productRoutes = require('./product.routes');
 const categoryRoutes = require('./category.routes');
 const offerRoutes = require('./offer.routes');
-// const bannerRoutes = require('./banner.routes.js');
-const imageRoutes = require('./image.routes.js');
+const cartRoutes = require('./cart.routes');
+const imageRoutes = require('./image.routes');
+const customerRoutes = require('./customer.routes');
+const otpRoutes = require('./otp.routes');
 
 const apiRoutes = express.Router();
 
@@ -13,9 +15,10 @@ apiRoutes.use('/users', userRoutes);
 apiRoutes.use('/products', authoriser, productRoutes);
 apiRoutes.use('/categories', authoriser, categoryRoutes);
 apiRoutes.use('/offers', authoriser, offerRoutes);
-// apiRoutes.use('/banners', bannerRoutes);
 apiRoutes.use('/images', imageRoutes);
-// apiRoutes.
+apiRoutes.use('/carts', cartRoutes);
+apiRoutes.use('/customers', customerRoutes);
+apiRoutes.use('/otp', otpRoutes);
 
 // apiRoutes.use('*', (req, res) => res.status(handlers.response.STATUS.NOT_FOUND)
 //   .send(handlers.response.getErrorPayload('Route Not Found', handlers.response.STATUS.NOT_FOUND)));
